# paper-analyst

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt  setup.py
references/: html-handoff.md  output-schema.md  paper-type-rubric.md  pptx-handoff.md  presentation-schema.md  presentation-style-guide.md  quality-checklist.md
scripts/: extract_pdf_figures.py  extract_pdf_meta.py  pdf_to_markdown.py
vi_system/: vi-schema.json
vi_system/example/: README.md  vi.json
workflows/: analysis.md  extended.md  presentation.md
